# UFS-RAQMS-TROPOMI-CO

./: '  7  README.COFIRE85PERCNET  README.CURRENT  README.V91  README.md  a.out  add4  add6  add8  compile  coupledFV3_GSDCHEM.appBuilder  coupledFV3_GSDCHEM.appBuilder.mk  outesmfenv  outesmfenv2  outgit  outpush  save.gitmodules  setup18.0.4.esmf.8.0.0.bs47  test.f90  writezero.f90
FMS/: save.git
FMS/FMS_INSTALL/: fms.mk
FMS/fv3gfs/: MersenneTwister.i90  amip_interp.i90  astronomy.i90  atmos_ocean_fluxes.i90  axis_utils.i90  block_control.i90  cloud_interpolator.i90  column_diagnostics.i90  constants.i90  coupler_types.i90  data_override.i90  depend  diag_axis.i90  diag_data.i90  diag_grid.i90  diag_manager.i90  diag_manifest.i90  diag_output.i90  diag_table.i90  diag_util.i90  drifters.i90  drifters_comm.i90  drifters_core.i90  drifters_input.i90  fft.i90  (+55 more)
FV3/: atmos_model.F90  atmos_model.i90  fv3.mk  fv3_cap.F90  fv3_cap.i90  module_fcst_grid_comp.i90  module_fv3_config.i90  outdiffgfsphysics  outpwd  printradiation  save.git  time_utils.i90
GSDCHEM/: Makefile  Makefile.in  aclocal.m4  config.status  configure  gsdchem.mk  outconf  outpwd  outsubmit  save.git
GSDCHEM/src/chem/cedsair/: Makefile  Makefile.am  Makefile.in  cedsair_data_mod.F90  cedsair_data_mod.F90.08.18.2023.prints  cedsair_data_mod.mod  cedsair_mod.F90  cedsair_mod.F90.08.16.2023  cedsair_mod.F90.08.18.2023.prints  cedsair_mod.F90.10.03.2023  cedsair_mod.mod  outpwd
NEMS/: log  log.1  outdiffsrc  outpwd  save.dit
RAQMSCHEM/: F*  Makefile  Makefile.am  Makefile.in  README  README.AJL  config.h  config.status  configure  configure.ac  outa  outcon  outconf  outconfS4  outdiffsrc  outpwd
RAQMSCHEM/autom4te.cache/: output.1  requests  traces.0  traces.1
RAQMSCHEM/src/: Makefile  Makefile.in  outdiffchem  outdiffraqmschem  outpwd
RAQMSCHEM/src/chem/: Makefile  Makefile.am  Makefile.am.orig  Makefile.in  outdiff.shr  outdiffraqms.new.aod  outdiffsh.AOD.SAMF  outdiffshr.new.aod  outgsicem  outpwd  outraqms  outraqms.AOD.SAMF  outraqmsjan  outshrjan  raqmschemCap.F90  raqmschemCap.F90.05.30.2018  raqmschemCap.F90.cardinal  raqmschemCap.F90.old  raqmschem_methods.F90  raqmschem_methods.F90.cardinal  raqmschem_methods.mod  raqmschm.mod  utshr
RAQMSCHEM/src/chem/add/: Makefile.am
RAQMSCHEM/src/chem/plume/: Makefile  Makefile.am  Makefile.in  outdiffplumemod  outpwd  plume_rise_mod.F90  printplume  raq_plume_data_mod.F90  raq_plume_data_mod.mod  raq_plume_scalar_mod.F90.10.03.2023  raq_plume_scalar_mod.mod  raq_plume_zero_mod.F90  raq_plume_zero_mod.mod  raqms_plume_mod.F90  raqms_plume_mod.mod
RAQMSCHEM/src/chem/raqms/: '  =  F*  Makefile  Makefile.am  Makefile.am.05.01.2019  Makefile.am.save.10.20  Makefile.in  ]  advdatehr.f90  calcaod.F90  calcaodgsi.F90  calcaodgsi.F90.10.03.2023  ccwvl.h  chem_driver_3d_nmhc.F.06.27.2018  chem_driver_3d_nmhc.F.beforefastj.F  chem_driver_3d_nmhc.F.oldsorcss  chem_driver_3d_nmhc.fastjtype.F  chem_driver_3d_nmhc.fastjtype.F.03.28.2019  chem_driver_3d_nmhc.fastjtype.F.07.5.2023  chem_driver_3d_nmhc.fastjtype.F.08.28.2023.save  chem_driver_3d_nmhc.fastjtype.F.09.15.2023  chem_driver_3d_nmhc.fastjtype.F.09.26.2023  chem_driver_3d_nmhc.fastjtype.F.12.09.2023  chemgsimod.F90  chemgsimod.F90.10.03.2023  chemgsimod.F90.12.09.2023  chemgsimod.F90.12.26.2023  chemgsimod.mod  chemlocaldefinepointer2.h  chemlocaldefinepointer2F.h  chemlocalsetpointer.h  choosechem.h  cmn_fj.h  cmn_fj.nl63.njv53.h  combined_chemsource_nmhc.F  combined_chemsource_nmhc_v200902.murali.7.HTAPMONTH.newdt.fv3.J.09.22.2023  combined_chemsource_nmhc_v200902.murali.7.HTAPMONTH.newdt.fv3.J.10.03.2023  combined_chemsource_nmhc_v200902.murali.7.HTAPMONTH.newdt.fv3.J.oldsstreatment  combined_chemsource_nmhc_v200902.murali.7.HTAPMONTH.newdt.fv3.J.saveoldss5  (+72 more)
RAQMSCHEM/src/chem/raqms/keep/: chem_driver_3d_nmhc.F  dep_ctrans_grell_mod.F90  dep_wet_ls_mod.F90  photcode_larc_47_nmhc_v0.7.F  raqms_mod.F90  raqms_model_mod.F90  wetdep_alpha_mod.F90  wetdep_fam_mod.F90  wetdep_mod.F90  wetdep_prep_mod.F90
RAQMSCHEM/src/chem/raqms2/: calcaodgsi.F90  chem_driver_3d_nmhc.fastjtype.F  chemgsimod.F90  compute_aod_raqms_gfsqsat.F90  photcode_larc_47_nmhc_v0.7.F  raqms.tar  raqms_mod.F90  raqms_model_mod.F90
RAQMSCHEM/src/chem/shr/: Makefile  Makefile.am  Makefile.am.04.02.2019  Makefile.in  ]  a.out  addgsidata  calcdxdy.F90  calcdxdy.F90.orig  calcdxdy.F90.version1  calcdxdy.mod  calcvort-dgrid_mod.F90  calcvort-dgrid_mod.F90.version3  calcvort-dgrid_mod.F90.version4  calcvort-dgrid_mod.version2.F90  calcvort_dgrid_mod.mod  calcvort_mod.F90.prints  calcvort_mod.F90.version1.F90  calcvort_mod.mod  caldyi.F  cedsair.f  chemlist  chemlocaldefinepointer.h  chemlocaldefinepointer2.h  chemlocaldefinepointer2F.h  chemlocaldefinepointerF.h  chemlocalsetpointer.h  chemlocalsetpointer2.h  chemreducetilepushwithalo  choosechem.h  choosevan.h  makecode.f90  move2  moveceds  moveceds2  mpishorthand.F90  mpishorthand.mod  nrseach.F90  options.h  otudiffchemmodel  (+66 more)
RAQMSCHEM/src/chem/shr/shrkeep/: calcvort-dgrid_mod.F90  calcvort-dgrid_mod.F90.version1.F90  calcvort_mod.F90  chem_comm_mod.F90  chem_const_mod.F90  chem_data_mod.F90  chem_io_mod.F90  chem_model_mod.F90  chem_state_mod.F90  raqmschem_comm_mod.F90  raqmschem_config_mod.F90  raqmschem_io_mod.F90  raqmschem_iodata_mod.F90  raqmschem_species_mod.F90  raqmschem_vars_mod.F90
RAQMSCHEM/src/chem/shr2/: raqmschem_comm_mod.F90  raqmschem_io_mod.F90  raqmschem_pmgrid_mod.F90  shr.tar
RAQMSCHEM/src/chem/shrl/: Makefile  Makefile.am  Makefile.in  chem_io_mod.F90  outpwd
RAQMSCHEM_INSTALL/: raqmschem.mk
ccpp/: build_ccpp.sh  set_compilers.sh
compsets/: all.input  fv3.input  fv3gsdchem.input  hera.input  outpwd  printgfdlmp.gbb.frg.fengs  theia.input  wcoss.input
parm/: chm.gfdlmp.c384.nml.IN  chm_field_table.tracers.full.V1.cod25  chm_field_table.tracers.full.gfdl  outpwd
save.git/: HEAD  config  index  packed-refs
tests/: atparse.bash  default_vars.sh  detect_machine.sh  outa  outmoduleavail  outmodulelist  outpwd  outrt  rt_fv3gsdchem.sh  runnow.sh  setup.fv3
(+1846 files in other folders)
